Renamed endorsed.dir property and revised module loading during build.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>